syntax = "proto3";
package service;
option go_package = "github.com/nspcc-dev/neofs-proto/service";

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

option (gogoproto.stable_marshaler_all) = true;

message RequestMetaHeader {
    uint32 TTL   = 1;
    uint64 Epoch = 2;
}
